2010-04-20	The InnoDB Team

	* dict/dict0crea.c, handler/ha_innodb.cc, include/trx0trx.h:
	Fix Bug#50495 'Row size too large' for plugin, but works for
	built-in InnoDB
	Only check the record size at index creation time when
	innodb_strict_mode is set.

2010-04-20	The InnoDB Team

	* btr/btr0btr.c, include/univ.i:
	Implement UNIV_BTR_AVOID_COPY, for avoiding writes when a B-tree
	node is split at the first or last record.

2010-04-15	The InnoDB Team

	* trx/trx0rec.c:
	Fix Bug#52746 InnoDB purge thread crashed with table containing
	prefix indexed blobs

2010-03-31	The InnoDB Team

	* mysql-test/innodb_bug51920.test, mysql-test/innodb_bug51920.result,
	srv/srv0srv.c:
	Fix Bug#51920 InnoDB connections in row lock wait ignore KILL
	until lock wait timeout

2010-03-31	The InnoDB Team

	* mysql-test/innodb_bug38231.test:
	Remove non-determinism in the test case.

2010-03-18	The InnoDB Team

	* CMakeLists.txt:
	Fix Bug#52102 InnoDB Plugin shows performance drop compared to
	InnoDB (Windows)

2010-03-18	The InnoDB Team

	* buf0buf.ic:
	When comparing the time of the first access to a block against
	innodb_old_blocks_time, use 32-bit arithmetics. The comparison was
	incorrect on 64-bit systems.

2010-03-11	The InnoDB Team

	* buf0buf.h, buf0buf.ic:
	Fix and clarify the latching of some buf_block_t members.
	Note that check_index_page_at_flush is not protected by any mutex.
	Note and assert that lock_hash_val is protected by the rw-latch.

2010-03-10	The InnoDB Team

	* trx/trx0sys.c:
	Fix Bug#51653 outdated reference to set-variable

2010-03-10	The InnoDB Team

	* handler/ha_innodb.cc, mysql-test/innodb_bug21704.result,
	mysql-test/innodb_bug47621.result, mysql-test/innodb_bug47621.test:
	Fix Bug#47621 MySQL and InnoDB data dictionaries will become out of
	sync when renaming columns

2010-03-10	The InnoDB Team

	* handler/ha_innodb.cc:
	Fix Bug#51356 Many Valgrind errors in error messages
	with concurrent DDL

2010-03-10	The InnoDB Team
